# Flask-Production-Template-For-AI

./: .coveragerc  .cursorrules  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AI_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  docker-dev.ps1  docker-prod.ps1  live_quality_monitor.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  run_tests.py  test_register.py
.github/: COPILOT_INSTRUCTIONS.md
.github/workflows/: ci.yml  security.yml
.trae/rules/: project_rules.md
__template__/: __init__.py  models.py  routes.py  schemas.py  services.py  utils.py
ai_templates/: README.md  flask_blueprint.py  flask_model.py  flask_service.py  test_template.py
app/: __init__.py  api_docs.py  config.py  config_manager.py  extensions.py  urls.py
app/blueprints/: __init__.py
app/blueprints/api/: __init__.py  resources.py  routes.py
app/blueprints/auth/: __init__.py  routes.py
app/blueprints/examples/: __init__.py  resources.py  routes.py
app/blueprints/health/: __init__.py  resources.py  routes.py
app/models/: __init__.py  base.py  example.py
app/schemas/: __init__.py  base.py  common_fields.py
app/schemas/v1/: __init__.py  base.py  common.py
app/schemas/v2/: __init__.py  base.py  common.py
app/services/: __init__.py  base.py  example_service.py
app/static/: README.md
app/templates/: README.md
app/utils/: __init__.py  common_imports.py  decorators.py  error_handlers.py  logging_config.py  response_helpers.py  security.py  service_helpers.py
docker/: README.md
docker/nginx/: nginx.conf
docs/: code-quality-enforcement.md  configuration.md  coverage_guide.md  deployment.md  error_handling_and_logging.md  python_style_guide.md  security.md  troubleshooting.md
migrations/versions/: 1881707b494a_initial_migration.py
models/: README.md
scripts/: README.md  auto_fix_style_issues.py  check_blueprint_structure.py  check_encoding.py  check_style_compliance.py  check_url_prefixes.py  coverage_report.py  db_init.py  db_seeds.py  fix_specific_docstrings.py  fix_style_issues.py  gen_tests.py  make_blueprint.py  onboard_developer.py  quality_monitor.py  quickstart.ps1  quickstart.sh  setup_dev_environment.py  validate_production_config.py  validate_style_setup.py
tests/: __init__.py  conftest.py  test_api_coverage.py  test_basic_coverage.py  test_endpoint_coverage.py  test_utils_coverage.py
tests/api/: test_examples_api.py  test_examples_api.py.disabled  test_routes.py.disabled
tests/fixtures/: app_fixtures.py  data_fixtures.py  enhanced_fixtures.py  ml_fixtures.py
tests/integration/: test_app_integration.py
tests/ml/: test_ml_services.py
tests/performance/: test_performance.py
tests/unit/: test_api_routes.py  test_app.py  test_auth_routes.py  test_common_imports.py  test_config_manager.py  test_decorators.py  test_error_handlers.py  test_examples_routes.py  test_extensions.py  test_health_routes.py  test_logging_config.py  test_models.py  test_response_helpers.py  test_security.py  test_service_helpers.py  test_services.py
uploads/: README.md
